Added welcome text view to MainActivity

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,4 +21,15 @@
         android:layout_centerInParent="true"
         android:text="Open Map" />
 
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="77dp"
+        android:textSize="30dp"
+        android:textStyle="bold"
+        android:text="Welcome!" />
+
 </RelativeLayout>
